Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.7.0-beta
-
MacOSX 10.6.8, MacOSX 10.8.2, Qt Creator 2.7 built with Qt4.8.4
-
46dcfc30a40d816128e90931e1c18755ce575326
Description
This is a MacOS only issue - works fine on Linux/Windows.
Steps to reproduce:
- open a single file (self-explaining when using a file containing code like .cpp, .h, .qml - but problem exists for all single files that aren't project files) - won't matter if you're using FileDialog/Mouse or FileDialog/Command+Shift+g to specify path
- without (left-) clicking onto Creator or one of it's subwidgets perform a right click on one of the members of the opened file
Current behaviour:
- context menu items are almost all disabled because editor had no focus when clicking
Expected behaviour:
- context menu items should be enabled depending on the content of the editor
Attachments
Issue Links
- relates to
-
QTCREATORBUG-6918 Missing editor focus on Mac
-
- Closed
-
- replaces
-
QTCREATORBUG-6918 Missing editor focus on Mac
-
- Closed
-