Activate window of editor when setting focus on it.

Both fixes a bug with Qt4 and is needed when having multiple toplevel
editor windows.

Task-number: QTCREATORBUG-8735
Change-Id: I151164a6ad00beb92cb241e581d381a9534733f8
Reviewed-by: Christian Stenger <christian.stenger@digia.com>